# rforth

./: .gitignore  ANALYSIS.md  ANSI_FORTH_ANALYSIS.md  ANSI_FORTH_STATUS_UPDATE.md  ANSI_STATUS.md  CMakeLists.txt  MISSING_WORDS.md  README.md  ansi_check.py  ansi_test.f  ansi_test_compiled.c  build-pi.sh  check_words.sh  current_words.txt  current_words_updated.txt  demo.f  demo_test.f  error_prop_test.f  error_prop_test2.f  error_test.f  hello.f  hello_test.f  nested_test.f  precise_ansi_check.py  simple_test.f  simple_test_compiled.c  test.f  toolchain-pi-zero-2w.cmake  turnkey_app  turnkey_app.c  updated_ansi_check.py
docs/: GPIO.md  api.md
examples/: README.md
examples/algorithms/: README.md  fibonacci.f
examples/basic/: README.md  demo.f  hello.f  simple.f  square.f
examples/rpi/: README.md  blink.f  button.f  fade.f  morse.f  toggle.f  traffic.f
include/: compiler.h  config.h  dict.h  gpio_rpi.h  io.h  parser.h  rforth.h  rpi_peripherals.h  stack.h  timing_rpi.h  turnkey.h
src/: builtins.c  builtins.c.backup  builtins_new.c  codegen.c  compiler.c  dict.c  error.c  gpio_rpi.c  interpreter.c  io.c  main.c  parser.c  runtime.c  stack.c  timing_rpi.c  turnkey.c
